samples/_failures_safe/1761688129_62b52c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5a11d35.c: In function ‘main’:
./samples/SAFE/__tmp_e5a11d35.c:152:16: error: missing terminating " character
  152 |         printf("
      |                ^
./samples/SAFE/__tmp_e5a11d35.c:152:9: error: expected expression at end of input
  152 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_e5a11d35.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e5a11d35.c:152:9: error: expected declaration or statement at end of input
